<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:padding="16dp">


    <TextView
        android:id="@+id/titulo_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bienvenido_a_parking_control"
        android:textColor="@color/colorAccent"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="60dp"/>

    <TextView
        android:id="@+id/sub_titulo_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titulo_login"
        android:text="@string/inicia_sesi_n_para_empezar"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        />


    <ImageView
        android:id="@+id/img_center"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:contentDescription="@string/imagen_centro"
        android:src="@drawable/ic_directions_car_black_24dp"
        android:layout_below="@id/sub_titulo_login"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/container_user_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_center"
        android:layout_centerHorizontal="true"
        android:hint="@string/nombre_de_usuario">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pass_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/container_pass_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/container_user_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:hint="@string/contrase_a">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/check_recordar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Recordarme"
        android:layout_below="@id/container_pass_login"
        android:layout_marginTop="15dp"
        android:layout_alignParentStart="true"/>


    <Button
        android:id="@+id/btn_ingresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@id/check_recordar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
        android:backgroundTint="@color/colorAccent"
        android:text="iniciar sesion"
        android:textColor="@android:color/white"/>

</RelativeLayout>